--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -1,9 +1,14 @@
-name: Integration tests
-description: Runs Jahia integration tests on an Ubuntu server
+name: 'Integration tests'
+description: 'Runs Jahia integration tests on an Ubuntu server'
+author: 'Jahia'
 
 # To review: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
 
 inputs:
+  milliseconds: # change this
+    required: true
+    description: 'input description here'
+    default: 'default value if applicable'
   module_id:
     description: 'Module ID'
     required: true
@@ -190,318 +195,6 @@ inputs:
     description: 'Destination where to store the artifacts (jahia or github)'
     required: false
     default: 'jahia'
-
 runs:
-  using: "composite"
-  steps:
-    - uses: actions/setup-node@v2
-      with:
-        node-version: ${{ inputs.node_version }}
-
-    - name: Install @jahia/jahia-reporter
-      shell: bash
-      run: | 
-        echo "::group::Install @jahia/jahia-reporter"
-        npm install -g @jahia/jahia-reporter
-        echo "::endgroup::"
-
-    # Download the artifacts that were saved at build time.
-    - name: Download a single artifact
-      if: ${{ inputs.should_use_build_artifacts == 'true' }}
-      uses: actions/download-artifact@v2
-      with:
-        name: build-artifacts
-
-    # Set the environment variables necessary for the docker-compose run
-    # These are declared here to avoid having to repeat in multiple steps
-    - name: Set environment variables from parameters
-      shell: bash
-      run: |
-        echo "MANIFEST=${{ inputs.tests_manifest }}" >> $GITHUB_ENV
-        echo "JAHIA_IMAGE=${{ inputs.jahia_image }}" >> $GITHUB_ENV
-        echo "JAHIA_LICENSE=${{ inputs.jahia_license }}" >> $GITHUB_ENV
-        echo "JAHIA_CLUSTER_ENABLED=${{ inputs.jahia_cluster_enabled }}" >> $GITHUB_ENV
-        echo "TESTS_IMAGE=${{ inputs.tests_image }}" >> $GITHUB_ENV
-        echo "JCUSTOMER_IMAGE=${{ inputs.jcustomer_image }}" >> $GITHUB_ENV
-        echo "ELASTICSEARCH_IMAGE=${{ inputs.elasticsearch_image }}" >> $GITHUB_ENV
-        echo "NEXUS_USERNAME=${{ inputs.nexus_username }}" >> $GITHUB_ENV
-        echo "NEXUS_PASSWORD=${{ inputs.nexus_password }}" >> $GITHUB_ENV
-        echo "DOCKER_USERNAME=${{ inputs.docker_username }}" >> $GITHUB_ENV
-        echo "CURRENT_BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
-
-    - name: Display important versions and environment variables
-      shell: bash
-      run: |
-        echo "node -v: $(node -v)"
-        echo "npm -v: $(npm -v)"
-        echo "jahia-reporter -v: $(jahia-reporter -v)"
-        echo "Displaying important environment variables"
-        echo "MANIFEST=${MANIFEST}"
-        echo "JAHIA_IMAGE=${JAHIA_IMAGE}"
-        echo "TESTS_IMAGE=${TESTS_IMAGE}"
-        echo "JCUSTOMER_IMAGE=${JCUSTOMER_IMAGE}"
-        echo "ELASTICSEARCH_IMAGE=${ELASTICSEARCH_IMAGE}"
-        echo "NEXUS_USERNAME=${NEXUS_USERNAME}"
-        echo "DOCKER_USERNAME=${DOCKER_USERNAME}"
-        echo "Current branch is: CURRENT_BRANCH=${CURRENT_BRANCH}"
-
-    - name: Prepare export folder
-      shell: bash
-      run: |
-        mkdir -p ${{ inputs.tests_path }}artifacts
-  
-    # Login to the docker registry is needed to access some images (snapshots, ...)
-    - name: Docker login
-      uses: docker/login-action@v1
-      with:
-        username: ${{ inputs.docker_username }}
-        password: ${{ inputs.docker_password }}
-
-    - name: Preparing build artifacts
-      shell: bash
-      run: |
-        if [ ${{ inputs.should_skip_artifacts }} == false ]; then
-          find . -type f -path '*/target/*-SNAPSHOT.jar' -exec cp '{}' ${{ inputs.tests_path }}artifacts/ ';' || :
-          if [ -d ./build-dependencies/ ]; then
-            mkdir -p ${{ inputs.tests_path }}artifacts/build-dependencies
-            cp ./build-dependencies/* ${{ inputs.tests_path }}artifacts/build-dependencies/
-            echo "Content of build-dependencies"
-            ls -lah ${{ inputs.tests_path }}artifacts/build-dependencies/
-          fi
-          ls -lah ${{ inputs.tests_path }}artifacts
-        fi
-
-    # We always build the test container from scratch
-    # Docker layer caching makes this quick if it was already previously built
-    # To test a previous release, a specific branch can be provided      
-    - name: Build the tests image
-      shell: bash
-      run: |
-        if [ ${{ inputs.should_build_testsimage }} == true ]; then
-          echo "::group::Build the tests image"
-          cd ${{ inputs.tests_path }}
-          if [[ "${{ inputs.tests_container_branch }}" != "" ]]; then
-            git checkout ${{ inputs.tests_container_branch }}
-          fi
-          docker build -t ${{ inputs.tests_image }} .
-          docker save -o tests_image.tar ${{ inputs.tests_image }}
-          echo "::endgroup::"
-        fi
-
-    # Pull the latest version of ${JAHIA_IMAGE} and ${JCUSTOMER_IMAGE}
-    - name: Pull the latest version of Jahia and jCustomer and print docker images cache to console
-      shell: bash
-      run: |
-        echo "::group::Pull the latest version of Jahia and jCustomer and print docker images cache to console"
-        cd ${{ inputs.tests_path }}
-        . ./set-env.sh
-        echo "List of docker images in local cache PRIOR pull" > ./artifacts/docker.log
-        docker images --digests --all 2>&1 | tee -a ./artifacts/docker.log
-        echo "--------------------------------------------------" >> ./artifacts/docker.log
-        if [[ "$JAHIA_IMAGE" != "" ]]; then
-          docker pull ${JAHIA_IMAGE}
-        fi
-        if [[ "$JCUSTOMER_IMAGE" != "" ]]; then
-          docker pull ${JCUSTOMER_IMAGE}
-        fi        
-        echo "List of docker images in local cache AFTER pull" >> ./artifacts/docker.log
-        docker images --digests --all 2>&1 | tee -a ./artifacts/docker.log
-        echo "--------------------------------------------------" >> ./artifacts/docker.log  
-        echo "::endgroup::"
-
-    # Using abort-on-container-exit will exit on first container failure, which
-    # for us will be the test container
-    - name: Spin-up the containers
-      shell: bash  
-      run: |
-        echo "::group::Spin-up the containers"
-        cd ${{ inputs.tests_path }}
-        export DOCKER_CLIENT_TIMEOUT=120
-        export COMPOSE_HTTP_TIMEOUT=120
-        . ./set-env.sh
-        if [[ -f "${{ inputs.ci_startup_script }}" ]]; then
-          echo "Startup script is present"
-          bash ${{ inputs.ci_startup_script }}
-        else
-          docker-compose -f ${{ inputs.docker_compose_file }} up --abort-on-container-exit
-        fi
-        echo "::endgroup::"
-
-    - name: Export containers artifacts (reports, secreenshots, videos)
-      shell: bash
-      if: always()
-      run: |
-        cd ${{ inputs.tests_path }}
-        docker cp ${{ inputs.tests_container_name }}:/home/jahians/results ./artifacts
-
-    # Running logs with -t adds a timestamp, this might feel redundant with the timestamp provided
-    # by directly jahia but this allows for easy comparison between various containers that might
-    # have their timezone set differently
-    - name: Export containers logs
-      shell: bash
-      if: always()
-      run: |
-        echo "::group::Export containers logs"
-        cd ${{ inputs.tests_path }}
-        . ./set-env.sh
-        docker stats --all --no-stream > ./artifacts/results/docker-stats.log
-        cat ./artifacts/results/docker-stats.log
-        docker-compose logs -t --tail="all" > ./artifacts/results/all-containers.log
-        docker logs jahia > ./artifacts/results/jahia.log
-        docker logs ${{ inputs.tests_container_name }} > ./artifacts/results/${{ inputs.tests_container_name }}.log
-        cp ./artifacts/docker.log ./artifacts/results/
-        echo "::endgroup::"
-
-    - name: Analyze Test results
-      shell: bash
-      if: always()
-      run: |
-        cd ${{ inputs.tests_path }}
-        if [[ ! -e ./artifacts/results/test_success ]]; then
-          echo "More than one failure found, sending exit signal"
-          exit 1
-        fi
-
-    # If a ci.postrun.sh script is present, this script is executed
-    # The main purpose of this script is to export additional artifacts,
-    # capture logs from other containers, ...    
-    - name: Execute Postrun script if present
-      shell: bash
-      if: always()
-      run: |
-        cd ${{ inputs.tests_path }}
-        export DOCKER_CLIENT_TIMEOUT=120
-        export COMPOSE_HTTP_TIMEOUT=120
-        . ./set-env.sh
-        if [[ -f "${{ inputs.ci_postrun_script }}" ]]; then
-          echo "::group::Execute Postrun script"
-          echo "Postrun script is present"
-          bash ${{ inputs.ci_postrun_script }}
-          echo "::endgroup::"
-        fi
-
-    # Once all is executed, results are submitted to external platforms
-    # Testrail report and Slack (failure only) notifications are sent during scheduled executions or merged into the main branch 
-    - name: Publish results to testrail
-      shell: bash
-      if: always()
-      run: |
-        if [ ${{ inputs.should_skip_testrail }} == false ] || [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ]; then
-          echo "::group::Publish results to testrail"
-          cd ${{ inputs.tests_path }}
-          jahia-reporter testrail \
-            --testrailUsername="${{ inputs.testrail_username }}" \
-            --testrailPassword="${{ inputs.testrail_password }}" \
-            --sourcePath="artifacts/results/xml_reports" \
-            --sourceType="xml" \
-            --projectName="${{ inputs.testrail_project }}" \
-            --milestone="${{ inputs.testrail_milestone }}" \
-            --defaultRunDescription="This test was executed on Github Actions, $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
-          echo "::endgroup::"
-        fi
-
-    # See https://theoephraim.github.io/node-google-spreadsheet/#/getting-started/authentication for Google Auth setup
-    - name: Create incident in PagerDuty
-      shell: bash 
-      if: failure()
-      run: |
-        echo "Current branch is: $CURRENT_BRANCH"
-        if [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ] || [ master == $CURRENT_BRANCH ]; then
-          echo "::group::Create incident in PagerDuty"
-          cd ${{ inputs.tests_path }}
-          jahia-reporter pagerduty:incident \
-            --sourcePath="artifacts/results/xml_reports" \
-            --sourceType="xml" \
-            --pdApiKey="${{ inputs.incident_pagerduty_api_key }}" \
-            --pdReporterEmail="${{ inputs.incident_pagerduty_reporter_email }}" \
-            --pdReporterId="${{ inputs.incident_pagerduty_reporter_id }}" \
-            --pdTwoStepsAssign \
-            --googleSpreadsheetId="${{ inputs.incident_google_spreadsheet_id }}" \
-            --googleClientEmail="${{ inputs.incident_google_client_email }}" \
-            --googleApiKey="${{ inputs.incident_google_api_key_base64 }}" \
-            --googleUpdateState \
-            --service="${{ inputs.module_id }}" \
-            --sourceUrl=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
-          echo "::endgroup::"
-        fi  
-
-    - name: Send Notifications to Slack
-      shell: bash 
-      if: always()
-      run: |
-        if [ ${{ inputs.should_skip_notifications }} == false ] || [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ]; then
-          echo "::group::Send Notifications to Slack"
-          cd ${{ inputs.tests_path }}
-          jahia-reporter slack \
-            --channelId="${{ inputs.slack_channel_id_notifications }}" \
-            --channelAllId="${{ inputs.slack_channel_id_notifications_all }}" \
-            --token="${{ inputs.slack_client_token }}" \
-            --skipSuccessful \
-            --sourcePath="artifacts/results/xml_reports" \
-            --sourceType="xml" \
-            --moduleFilepath="artifacts/results/installed-jahia-modules.json" \
-            --msgAuthor="Github Actions ($GITHUB_REPOSITORY)" \
-            --runUrl=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
-          echo "::endgroup::"
-        fi 
-
-    - name: Send Test data to https://zencrepes.jahia.com
-      shell: bash
-      if: always()
-      run: |
-        if [ ${{ inputs.should_skip_zencrepes }} == false ] || [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ]; then
-          echo "::group::Send Test data to https://zencrepes.jahia.com"
-          cd ${{ inputs.tests_path }}
-          jahia-reporter zencrepes \
-            --webhook="https://zencrepes.jahia.com/zqueue/testing/webhook" \
-            --webhookSecret="${{ inputs.zencrepes_secret }}" \
-            --sourcePath="artifacts/results/xml_reports" \
-            --sourceType="xml" \
-            --moduleFilepath="artifacts/results/installed-jahia-modules.json" \
-            --name="${{ inputs.module_id }}" \
-            --runUrl=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
-          echo "::endgroup::"
-        fi
-
-    - name: Publish Test Report
-      uses: mikepenz/action-junit-report@v2
-      if: always()
-      with:
-        report_paths: '${{ inputs.tests_path }}artifacts/results/xml_reports/**/*.xml'
-        check_name: ${{ inputs.tests_report_name }}
-
-    - name: Archive test results
-      if: failure()
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ inputs.artifact_name }}
-        path: ${{ inputs.tests_path }}artifacts/results/
-        retention-days: ${{ inputs.artifact_retention }}
-
-    # This is used an alternative to actions/upload-artifact@v2 to limit costs on GitHub infrastructure
-    # - name: Archive test results
-    #   if: failure()
-    #   uses: jahia/jahia-modules-action/integration-tests@v1
-    #   with:
-    #     destination: ${{ inputs.artifact_destination }}
-    #     name: integration-tests-results
-    #     path: ${{ inputs.tests_path }}artifacts/results/
-    #     retention-days: ${{ inputs.artifact_retention }}
-
-    - name: Keep session opened if /tmp/debug file is present
-      shell: bash
-      if: always()
-      run: |
-        echo "::group::Keep session opened if /tmp/debug file is present"
-        WAIT_DURATION=0
-        while [[ -e /tmp/debug ]]; do
-          echo "Debug file present - $(( ++ WAIT_DURATION ))s - waiting for file removal..."
-          if [ $WAIT_DURATION -gt ${{ inputs.debug_session_timeout }} ]; then
-            echo "Reached timeout of: ${{ inputs.debug_session_timeout }}"
-            echo "Exiting the loop"
-            break
-          fi
-          sleep 1;
-        done
-        echo "::endgroup::"
-
+  using: 'node16'
+  main: 'dist/index.js'
