Fix path in publish action

--- a/publish/action.yml
+++ b/publish/action.yml
@@ -4,7 +4,7 @@ description: Publish a Jahia module to NEXUS
 inputs:
   mvn_settings_filepath:
     description: Filepath to the settings.xml file
-    default: '.circleci/.circleci.settings.xml'
+    default: '.github/maven.settings.xml'
     required: false
   nexus_username:
     description: 'Nexus Username'
