Fix path in rollback action

--- a/release-rollback/action.yml
+++ b/release-rollback/action.yml
@@ -4,7 +4,7 @@ description: Rollback a release by using backup files perviously cached
 inputs:
   mvn_settings_filepath:
     description: Filepath to the settings.xml file
-    default: '.circleci/.circleci.settings.xml'
+    default: '.github/maven.settings.xml'
     required: false
   release_id:
     description: GitHub release ID
